Fixed filter alignment for addons and documentation pages

--- a/src/main/webapp/resources/css/app.css
+++ b/src/main/webapp/resources/css/app.css
@@ -21,3 +21,8 @@
 	color: white;
 	text-shadow: none;
 }
+
+.filter label {
+	padding-left: 3px;
+	padding-right: 5px;
+}
